JPackage Maven Plugin 1.7.1
* Updated documentation and examples
* Updated dependencies
* No functional changes