@@ -1,41 +1,26 @@
-## Application image with full JRE
+# Non-Modular Application
+
+This example shows how to build an application image in case not all dependencies represent Java modules. 
+
+Entire JDK is used as runtime image and ```jlink``` is not involved.
 
 ```xml
 <plugin>
     <groupId>org.panteleyev</groupId>
     <artifactId>jpackage-maven-plugin</artifactId>
-    <version>1.6.4</version>
 
     <configuration>
         <name>Application Name</name>
         <appVersion>${project.version}</appVersion>
         <vendor>app.org</vendor>
+        <!-- Entire JDK is used as runtime image -->
         <runtimeImage>${java.home}</runtimeImage>
         <module>${appModule}/${appMainClass}</module>
         <modulePaths>
-            <modulePath>target/mods</modulePath>
+            <modulePath>${project.build.directory}/mods</modulePath>
         </modulePaths>
-        <destination>target/dist</destination>
-        <javaOptions>
-            <option>--enable-preview</option>
-            <option>-Dfile.encoding=UTF-8</option>
-        </javaOptions>
+        <destination>${project.build.directory}/dist</destination>
+        <removeDestination>true</removeDestination>
     </configuration>
-
-    <executions>
-        <execution>
-            <id>mac</id>
-            <configuration>
-                <icon>icons/icons.icns</icon>
-            </configuration>
-        </execution>
-        <execution>
-            <id>win</id>
-            <configuration>
-                <icon>icons/icon.ico</icon>
-                <winMenu>true</winMenu>
-            </configuration>
-        </execution>
-    </executions>
 </plugin>
 ```
