@@ -1,9 +1,15 @@
-## Usage
+# Usage
 
 For detailed information about ```jpackage``` please refer to
-[Packaging Tool User's Guide](https://docs.oracle.com/en/java/javase/22/jpackage/packaging-tool-user-guide.pdf).
+[Packaging Tool User's Guide](https://docs.oracle.com/en/java/javase/25/jpackage/packaging-tool-user-guide.pdf).
 
-### Finding jpackage
+The goals of JPackage Plugin are not bound to any phase and must be executed manually after ```package```:
+
+```shell
+mvn clean verify jpackage:jpackage
+```
+
+## Finding jpackage
 
 Plugin searches for ```jpackage``` executable using the following priority list:
 
@@ -12,198 +18,35 @@ tool = "jpackage".
 
 2. ```java.home``` system property.
 
-### Configuration
+## Configuration
 
-There are generic parameters as well as OS-specific parameters for OS X and Windows.
-Plugin determines OS name using ```os.name``` system property in order to configure OS-specific parameters.
+Full details about plugin configuration and respective ```jpackage``` options can be found in
+[jpackage:jpackage](./jpackage-mojo.html) goal description.
 
-Generic parameters should be placed in the root plugin configuration. OS-specific parameters should be separated with
-executions or profiles.
+```jpackage``` defines a number of OS-specific options. They can be recognized by their prefix: ```win```,
+```mac``` or ```linux```. Plugin detects current OS using ```os.name``` system property and ignores corresponding 
+irrelevant parameters. This allows to set all OS-specific parameters in the root configuration block.
 
-See examples:
+If some common parameters like ```icon``` depend on OS they should be separated with either 
+[executions](./examples/executions.md) or [profiles](./examples/profiles.md).
 
-* [Configuration with executions](./examples/executions.html)
-* [Configuration with profiles](./examples/profiles.html)
+### Relative Path Resolution
 
-#### Mandatory Parameters
+Parameters of type ```File``` are resolved to absolute paths. To avoid unexpected results it is advised to supply
+absolute paths explicitly using Maven variables such as ```${project.basedir}```.
 
-To enable various configuration approaches mandatory parameters are validated during plugin execution:
+## Assembling Dependencies
 
-* name
-* destination
+This plugin does not utilize any classpath or modulepath from the build. This is a design decision made to avoid 
+unexpected effects especially with JavaFX maven artifacts.
 
-#### Relative Path Resolution
-
-The following plugin parameters define directory or file location:
-
-* destination
-* icon
-* input
-* resourceDir 
-* modulePath
-* runtimeImage
-* appImage  
-* temp
-* licenseFile
-* launcher.file
-* appContentPath
-* macEntitlements
-* macDmgContentPath
- 
-If path is not absolute is will be resolved as relative to ```${project.basedir}```.
-
-#### Java Options
-
-&lt;javaOptions> defines options for JVM running the application. Each option should be specified in a separate 
-&lt;option> tag.
-
-_Example:_
-
-```xml
-<javaOptions>
-    <javaOption>--enable-preview</javaOption>
-    <javaOption>-Dfile.encoding=UTF-8</javaOption>
-    <javaOption>--add-export</javaOption>
-    <javaOption>java.base/sun.security.util=ALL-UNNAMED</javaOption>
-</javaOptions>
-``` 
-
-### Destination Directory
-
-```jpackage``` utility fails if generated binary already exists. In order to work around this behaviour there is plugin
-boolean option ```removeDestination```. If ```true``` plugin will try to delete directory specified by ```destination```.
-This might be useful to relaunch ```jpackage``` task without rebuilding an entire project.
-
-For safety reasons plugin will not process ```removeDestination``` if ```destination``` points to a location outside of
-```${project.build.directory}```.
-
-#### Default Command-Line Arguments
-
-Default command line arguments are passed to the main class when the application is started without providing arguments.
-Each argument should be specified using &lt;argument> configuration parameter.
-
-_Example:_
-
-```xml
-<arguments>
-    <argument>SomeArgument</argument>
-    <argument>Argument with spaces</argument>
-    <argument>Argument with "quotes"</argument>
-</arguments>
-```
-
-#### Additional Launchers
-
-Additional launchers provide the opportunity to install alternative ways to start an application.
-
-_Example:_
-
-```xml
-<launchers>
-    <launcher>
-        <name>App1</name>
-        <file>src/resources/App1.properties</file>
-    </launcher>
-    <launcher>
-        <name>App2</name>
-        <file>src/resources/App2.properties</file>
-    </launcher>
-</launchers>
-```
-
-#### File Associations
-
-If you want your application to be started when a user opens a specific type of file, use ```<fileAssociations>``` 
-configuration.
-
-_Example:_
-
-```xml
-<fileAssociations>
-    <fileAssociation>src/properties/java.properties</fileAssociation>
-    <fileAssociation>src/properties/cpp.properties</fileAssociation>
-</fileAssociations>
-```
-
-Note: apparently this option does not work for modular applications.
-
-#### jlink options
-
-Options that are passed to underlying jlink call.
-
-_Example:_
-
-```xml
-<jLinkOptions>
-    <jLinkOption>--strip-native-commands</jLinkOption>
-    <jLinkOption>--strip-debug</jLinkOption>
-</jLinkOptions>
-```
-
-#### Additional JPackage Options
-
-Additional options allow passing jpackage command line options not supported by the plugin. These options are passed as is without any transformation.
-
-_Example:_
-
-```xml
-<additionalOptions>
-    <option>--jlink-options</option>
-    <option>--bind-services</option>
-</additionalOptions>
-```
-
-### Assembling Dependencies
-
-Before executing ```jpackage``` all runtime dependencies should be copied into a single folder together with main
-application jar. This example shows how to do this via ```maven-dependency-plugin```.
-
-```xml
-<plugins>
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-            <outputDirectory>target/jmods</outputDirectory>
-        </configuration>
-    </plugin>
-    
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-            <execution>
-                <id>copy-dependencies</id>
-                <phase>package</phase>
-                <goals>
-                    <goal>copy-dependencies</goal>
-                </goals>
-                <configuration>
-                    <includeScope>runtime</includeScope>
-                    <outputDirectory>target/jmods</outputDirectory>
-                </configuration>
-            </execution>
-        </executions>
-    </plugin>
-
-    <plugin>
-        <groupId>org.panteleyev</groupId>
-        <artifactId>jpackage-maven-plugin</artifactId>
-        <configuration>
-            <modulePaths>
-                <modulePath>target/jmods</modulePath>
-            </modulePaths>
-        </configuration>
-    </plugin>
-</plugins>
-```
+All required dependencies must be specified via plugin configuration. One way to do it is to gather all dependencies
+using ```maven-dependency-plugin``` as shown in [this example](examples/dependencies.md).
 
 ## Dry Run Mode
 
 To print jpackage parameters without executing jpackage set ```jpackage.dryRun``` property to ```true```.
 
-_Example:_
-
-```
-mvn clean package jpackage:jpackage@win -Djpackage.dryRun=true
+```shell
+mvn clean verify jpackage:jpackage -Djpackage.dryRun=true
 ```
